# Selection_T-Lab

./: .clang-format  CMakeLists.txt  README.md  build.bat  build.sh
include/: csv_reader.h  graph_builder.h  pagerank.h  types.h
src/: csv_reader.cpp  graph_builder.cpp  main.cpp  pagerank.cpp
tests/data/: bad.csv  big_nums.csv  dangling.csv  negative_ids.csv
